# zkid-benchmarks

./: .gitignore  README.MD
binius/: Cargo.toml  README.md
binius/benches/: sha256_bench.rs
binius/src/: bench.rs
ligero/: README.md
mobile/binius/: README.md
mobile/binius/android/app/src/main/java/com/example/moproapp/: MainActivity.kt  MultiplierComponent.kt
mobile/binius/ios/MoproApp/: ContentView.swift
mobile/binius/ios/MoproApp.xcodeproj/: project.pbxproj
mobile/plonky2/: .gitignore  Cargo.toml  README.MD  build.rs
mobile/plonky2/MoproAndroidBindings/uniffi/mopro/: mopro.kt
mobile/plonky2/MoproiOSBindings/: mopro.swift
mobile/plonky2/MoproiOSBindings/MoproBindings.xcframework/ios-arm64/Headers/: moproFFI.h
mobile/plonky2/android/app/src/main/java/com/mopro/mopro_app/: FibonacciComponent.kt  MainActivity.kt
mobile/plonky2/android/gradle/wrapper/: gradle-wrapper.properties
mobile/plonky2/ios/mopro-test/: ContentView.swift
mobile/plonky2/ios/mopro-test-UITests/: mopro_test_UITests.swift
mobile/plonky2/ios/mopro-test.xcodeproj/: project.pbxproj
mobile/plonky2/src/: lib.rs  mopro.udl  plonky2.rs
mobile/plonky2/tests/: plonky2.rs
mobile/plonky2/tests/bindings/: test_plonky2_fibonacci.kts  test_plonky2_fibonacci.swift  test_sha256.swift
plonky2/: Cargo.toml  LICENSE  README.md
plonky2/benches/: prove_verify.rs
plonky2/src/: bench.rs  lib.rs
plonky3-powdr/: .gitignore  Cargo.toml  README.md
plonky3-powdr/benches/: prove_verify.rs
plonky3-powdr/guest/: Cargo.toml
plonky3-powdr/guest/src/: main.rs
plonky3-powdr/src/: bench.rs  main.rs
plonky3-sp1/: Cargo.toml  LICENSE-MIT  README.MD
plonky3-sp1/elf/: riscv32im-succinct-zkvm-elf
plonky3-sp1/lib/: Cargo.toml
plonky3-sp1/lib/src/: lib.rs
plonky3-sp1/program/: Cargo.toml
plonky3-sp1/program/src/: main.rs
plonky3-sp1/script/: .gitignore  Cargo.toml  monitor.sh
plonky3-sp1/script/benches/: prove_verify.rs
polyhedra-expander/: .gitignore  Cargo.toml  README.md  expander_proving.sh
polyhedra-expander/src/: main.rs
stwo/: .gitignore  README.md  setup.sh  stwo_proving.sh  stwo_verify.sh
stwo/src/: input.json  input0.json  main.cairo  packed_sha256.cairo  sha256.cairo
