[package]
name = "binius"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
anyhow = "1.0.81"
alloy-primitives = "0.8.14"
array-util = "1.0.2"
binius_circuits = { git = "https://github.com/alxkzmn/binius", default-features = false }
binius_core = { git = "https://github.com/alxkzmn/binius", default-features = false }
binius_field = { git = "https://github.com/alxkzmn/binius", default-features = false }
binius_hal = { git = "https://github.com/alxkzmn/binius", default-features = false }
binius_hash = { git = "https://github.com/alxkzmn/binius", default-features = false }
binius_m3 = { git = "https://github.com/alxkzmn/binius", default-features = false }
binius_macros = { git = "https://github.com/alxkzmn/binius", default-features = false }
binius_math = { git = "https://github.com/alxkzmn/binius", default-features = false }
binius_utils = { git = "https://github.com/alxkzmn/binius", default-features = false }
bumpalo = { version = "3.16.0", features = ["collections"] }
bytemuck = { version = "1.18.0", features = [
    "derive",
    "min_const_generics",
    "must_cast",
] }
bytesize = "1.3.0"
clap = { version = "4.5.20", features = ["derive"] }
itertools = "0.13.0"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
tracing-profile = "0.10.3"
tracing = "0.1.38"
criterion = { version = "0.5.1" }
jemalloc-ctl = "0.5.4"
jemallocator = "0.5.4"

[[bench]]
name = "sha256_bench"
harness = false

[[bin]]
name = "measure"
path = "src/bin/measure.rs"

