[package]
name = "sha"
version = "0.1.0"
edition = "2021"

[features]
default = []
simd = ["powdr/plonky3-simd"]

[dependencies]
powdr = { git = "https://github.com/powdr-labs/powdr", tag = "v0.1.3", features = ["plonky3"] }

serde = { version = "1.0", default-features = false, features = [
  "alloc",
  "derive",
  "rc",
] }
serde_cbor = { version = "0.11.2", default-features = false, features = [
  "alloc",
] }

env_logger = "0.10.2"
log = "0.4.27"
rand = "0.9.0"
sha2 = "0.10.8"
criterion = "0.5.1"
tikv-jemalloc-ctl = {version="0.6.0", features=["stats"]}
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = {version="0.6.0", features=["stats"]}
memory-stats = "1.2.0"

[profile.bench]
opt-level = 3

[[bench]]
name = "prove_verify"
harness = false

[[bin]]
name = "measure"
path = "src/bin/measure.rs"



